[gd_scene load_steps=4 format=3]

[ext_resource type="Script" path="res://addons/inventory-system/editor/loots/loots_editor.gd" id=1]

[node name="LootsEditor" type="VBoxContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="LootList" type="ItemList" parent="HBoxContainer"]
rect_min_size = Vector2(200, 300)

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
[node name="LootName" type="LineEdit" parent="HBoxContainer/VBoxContainer"]
placeholder_text = "Loot Name"

[node name="LootItemsList" type="ItemList" parent="HBoxContainer/VBoxContainer"]
rect_min_size = Vector2(200, 200)

[node name="AddLoot" type="Button" parent="HBoxContainer/VBoxContainer"]
text = "Add LootItem"

[node name="RemoveLoot" type="Button" parent="HBoxContainer/VBoxContainer"]
text = "Remove LootItem"